--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="" alt="" id="test">
+    <img src="" alt="" id="test" style="border:1px solid #000;">
     <div class="wrapper">
         <img src="img/2.png" alt="" class="img" style="visibility: hidden">
         <div class="cover">
