some problems with push and pop states

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
     <img src="" alt="" id="test" style="border:1px solid #000;">
     <div class="wrapper">
-        <img src="img/2.png" alt="" class="img" style="visibility: hidden">
+        <img src="img/4.png" alt="" class="img" style="visibility: hidden">
         <div class="cover">
             <div class="container">
                 <div class="layer-content">
+                    <div class="ruler">
+                        <div class="ruler-block"></div>
+                        <div class="ruler-block"></div>
+                        <div class="ruler-block"></div>
+                        <div class="ruler-block"></div>
+                    </div>
                     <canvas class="canvas"></canvas>
                     <canvas class="canvas-cover"></canvas>
+
                 </div>
                 <div class="toolbar">
                     <div class="clip">裁剪</div>
