貌似！貌似可以了！我四不四撒！

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="" alt="" id="test" style="border:1px solid #000;">
+    <img src="" alt="" id="test" style="border:1px solid #000;position:fixed;top:0;left:0;">
     <div class="wrapper">
         <img src="img/4.png" alt="" class="img" style="visibility: hidden">
         <div class="cover">
