貌似可以了。。。

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <img src="" alt="" id="test" style="border:1px solid #000;position:fixed;top:0;left:0;">
     <div class="wrapper">
-        <img src="img/4.png" alt="" class="img" style="visibility: hidden">
+        <img src="img/2.png" alt="" class="img" style="visibility: hidden">
         <div class="cover">
             <div class="container">
                 <div class="layer-content">
@@ -25,21 +25,21 @@
 
                 </div>
                 <div class="toolbar">
-                    <div class="clip">裁剪</div>
-                    <div class="earase">擦除</div>
-                    <div class="match">文字匹配</div>
+                    <div class="tools btn clip">裁剪</div>
+                    <div class="tools btn earase">擦除</div>
+                    <div class="tools btn match">文字匹配</div>
                     <div class="tools">
-                        <div class="clock">顺时针旋转</div>
+                        <div class=" btn clock">顺时针旋转</div>
                         <input class="deg" type="text" placeholder="1">
-                        <div class="unclock">逆时针旋转</div>
+                        <div class="btn unclock">逆时针旋转</div>
                     </div>
                     <div class="tools">
-                        <div class="preStep">上一步</div>
-                        <div class="nextStep">下一步</div>
+                        <div class="btn preStep">上一步</div>
+                        <div class="btn nextStep">下一步</div>
                     </div>
                     <div class="tools">
-                        <div class="reset">重置</div>
-                        <div class="close">关闭</div>
+                        <div class="btn reset">重置</div>
+                        <div class="btn close">关闭</div>
                     </div>
                 </div>
             </div>
