--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 </div>
                 <div class="toolbar">
-                    <div class="tools btn clip">裁剪</div>
+                    <div class="tools btn clip" active="true">裁剪</div>
                     <div class="tools btn earase">擦除</div>
                     <div class="tools btn match">文字匹配</div>
                     <div class="tools">
