--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <input class="deg" type="text" placeholder="1">
                         <div class="btn unclock">逆时针旋转</div>
                     </div>
+                    <div class="tools btn oto">1:1</div>
                     <div class="tools">
                         <div class="btn preStep">上一步</div>
                         <div class="btn nextStep">下一步</div>
@@ -41,6 +42,7 @@
                         <div class="btn reset">重置</div>
                         <div class="btn close">关闭</div>
                     </div>
+
                 </div>
             </div>
 
