cancle some btn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="img/2.png" alt="" class="img" style="visibility: hidden">
         <div class="cover">
             <div class="container">
+                <h3 class="tip">缩放图片并移动田字格，使得单个汉字撑满田字格，或单个数字/字幕撑满半个田字格</h3>
                 <div class="layer-content">
                     <div class="ruler">
                         <div class="ruler-block"></div>
@@ -28,7 +29,7 @@
                     <div class="tools btn clip" active="true">裁剪</div>
                     <div class="tools btn earase">擦除</div>
                     <div class="tools btn match">文字匹配</div>
-                    <div class="tools">
+                    <div class="tools" id="rotate">
                         <div class=" btn clock">顺时针旋转</div>
                         <input class="deg" type="text" placeholder="1">
                         <div class="btn unclock">逆时针旋转</div>
@@ -43,6 +44,9 @@
                         <div class="btn close">关闭</div>
                     </div>
 
+                </div>
+                <div class="toolbar">
+                    <div class="btn sure">确认</div>
                 </div>
             </div>
 
